####### kdevelop will overwrite this part!!! (begin)##########

INCLUDES = $(all_includes)

libGUI_a_METASOURCES = AUTO

noinst_LIBRARIES = libGUI.a

libGUI_a_SOURCES = kiptablesudpport.cpp kiptablesudpportui.ui kiptablestcpportui.ui kiptablestcpport.cpp kiptablesaddnetwork.cpp kiptablesaddnetworkui.ui kiptablesaddhost.cpp kiptablesaddhostui.ui kiptablessettings.cpp kiptablessettgingsui.ui kiptablesmainui.ui kiptablesmain.cpp 


EXTRA_DIST = kiptablesmain.cpp kiptablesmain.h kiptablesmainui.h kiptablesmainui.ui kiptablessettgingsui.ui kiptablessettings.cpp kiptablessettings.h kiptablesaddhostui.ui kiptablesaddhost.cpp kiptablesaddhost.h kiptablesaddnetworkui.ui kiptablesaddnetwork.cpp kiptablesaddnetwork.h kiptablestcpport.cpp kiptablestcpport.h kiptablestcpportui.ui kiptablesudpportui.ui kiptablesudpport.cpp kiptablesudpport.h 

####### kdevelop will overwrite this part!!! (end)############
