####### kdevelop will overwrite this part!!! (begin)##########

INCLUDES = $(all_includes)

libLogic_a_METASOURCES = AUTO

noinst_LIBRARIES = libLogic.a

libLogic_a_SOURCES = kiptablesudp.cpp kiptablestcp.cpp kiptablesnetwork.cpp kiptableshost.cpp kiptablesconfig.cpp kiptablesprocess.cpp 


EXTRA_DIST = kiptablesprocess.cpp kiptablesprocess.h kiptablesconfig.cpp kiptablesconfig.h kiptableshost.cpp kiptableshost.h kiptablesnetwork.cpp kiptablesnetwork.h kiptablestcp.cpp kiptablestcp.h kiptablesudp.cpp kiptablesudp.h 

####### kdevelop will overwrite this part!!! (end)############
